<resources>
    <string name="app_name">Android_chat_client</string>
    <string name="enter_your_nickname">Enter server info</string>
    <string name="connect">Connect</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="nickname">Enter your nickname</string>
    <string name="nicknameButton">Submit</string>
    <string name="SendMessageButton">Send</string>
    <string name="Message">Type your message</string>
    <string name="messageAdapterPrivate">(Private)</string>
</resources>
